--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # server.port=80
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolio_jpa?useSSL=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=true&serverTimezone=UTC
 spring.datasource.username=admin1
 spring.datasource.password=admin1
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
