--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>portfolio-BackEnd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>portfolio-BackEnd</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Proyecto Final Argentina Programa 3.0</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -52,6 +52,21 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-security</artifactId>
+                </dependency>
+                <dependency>
+                        <groupId>io.jsonwebtoken</groupId>
+                        <artifactId>jjwt</artifactId>
+                        <version>0.9.1</version>
+                </dependency>
+	 <dependency>
+	  <groupId>javax.validation</groupId>
+	  <artifactId>validation-api</artifactId>
+	  <version>2.0.1.Final</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
