--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=true&serverTi
 spring.datasource.username=admin1
 spring.datasource.password=admin1
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+jwt.secret = secret
+jwt.expiration = 36000
