--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,23 @@
-# server.port=80
+#server.port=8081
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=true&serverTimezone=UTC
-spring.datasource.username=admin1
-spring.datasource.password=admin1
+spring.datasource.url=jdbc:mysql://portfolio-bbdd.mysql.database.azure.com:3306/portfolio?useSSL=true&serverTimezone=UTC
+spring.datasource.username=nickbau2015
+spring.datasource.password=vegaeldomado1.
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 jwt.secret = secret
 jwt.expiration = 36000
+
+#server.scheme=https
+#server.ssl.protocol=TLS
+#server.ssl.client-auth=none
+# SSL
+#server.port=8443
+# Spring Security
+#server.ssl.enabled=true
+#server.ssl.key-store=classpath:springboot.p12
+#server.ssl.key-store-password=vegaeldomado1.
+# JKS or PKCS12
+#server.ssl.key-store-type=pkcs12
+#server.ssl.key-alias=springboot
+#server.ssl.key-password=vegaeldomado1.
